# PyBomb-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  Procfile  README.md  game_search.py  mypy.ini  pyproject.toml  requirements.txt
src/demo/: web.py
src/demo/templates/: game.html
src/gamesearch/: web.py
src/gamesearch/templates/: base.html
templates/: base.html  game.html  game_details.html  home.html
