[tool.poetry]
name = "gamesearch"
version = "0.1.0"
description = "An example project of PyBomb, the Python client for GiantBomb."
authors = ["steveYeah <hutchinsteve@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pybomb = "^0.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-annotations = "^2.1.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
